[workspace]
resolver = "3"
members = [
    "apps/navira-store", 
    "libs/navira-car",
]

[workspace.package]
authors = ["FuseTim"]
edition = "2024"
license = "EUPL-1.2 OR CeCILL-2.1"

[workspace.dependencies]
clap = { version = "4.5.56", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
compio = { version = "0.18", features = [
    "fs",
    "io",
    "net",
    "runtime",
    "dispatcher",
] }
ipld-core = { version = "0.4.2" }
serde_ipld_dagcbor = "0.6.4"
thiserror = "2.0.18"
cid = "0.7.0"