[workspace]
resolver = "3"
members = [
    "apps/navira-store", 
    "libs/navira-car",
]

[workspace.package]
authors = ["FuseTim"]
edition = "2024"
license = "EUPL-1.2 OR CECILL-2.1"
repository = "https://github.com/fusetim/navira"

[workspace.dependencies]
clap = { version = "4.5.56", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
compio = { version = "0.18", features = [
    "fs",
    "io",
    "net",
    "runtime",
    "dispatcher",
] }
thiserror = "2.0.18"
ciborium = "0.2.2"
serde = { version = "1.0.188" }