[package]
name = "navira-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
compio = { version = "0.18", features = [
    "fs",
    "io",
    "net",
    "runtime",
    "dispatcher",
] }
