[package]
name = "navira-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
compio = { workspace = true }
thiserror = { workspace = true }
navira-car = { path = "../../libs/navira-car" }