[package]
name = "navira-car"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { workspace = true }
hex = "0.4.3"
ciborium = { workspace = true }
cid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bitfield = "0.19.4"