[package]
name = "navira-car"
version = "0.1.0"
description = "A library for reading and writing CAR (Content Addressable aRchive) files, supporting both CAR v1 and v2 formats."
keywords = ["car", "content-addressable", "archive", "ipfs", "sans-io", "navira"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { workspace = true }
hex = "0.4.3"
ciborium = { workspace = true }
cid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bitfield = "0.19.4"