[package]
name = "navira-car"
version = "0.1.1"
description = "A library for reading and writing CAR (Content Addressable aRchive) files, supporting both CAR v1 and v2 formats."
keywords = ["car", "content-addressable", "ipfs", "sans-io", "navira"]
categories = ["parser-implementations", "encoding"]
readme = "README.md"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
bitfield = "0.19.4"
hex = "0.4.3"
ciborium = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

cid = { version="0.11", default-features = false, optional = true }